@@ -1,5 +1,5 @@
 CC=gcc -g $(BUILD_BITS)
-BUILD_DIR = build-2.6.18-128.1.14.0.1.el5
+BUILD_DIR=build-$(shell uname -r)
 BINDIR=../../$(BUILD_DIR)
 CPPFLAGS += -D_ILP32 -D_LARGEFILE_SOURCE=1 -D_FILE_OFFSET_BITS=64 -D_LONGLONG_TYPE
 
