@@ -1,4 +1,5 @@
 CC=/usr/bin/gcc -g
+BUILD_DIR=build-$(shell uname -r)
 CPPFLAGS += -I../include
 BINDIR = ../build-2.6.18-128.1.14.0.1.el5
 LIB = $(BINDIR)/libport.a
