@@ -1,5 +1,6 @@
 CC=/usr/bin/gcc -g
 PTR32=-D_ILP32
+BUILD_DIR=build-$(shell uname -r)
 CPPFLAGS += -I../libproc/common \
         -I../common/ctf \
         -I../include \
@@ -9,7 +10,7 @@ CPPFLAGS += -I../libproc/common \
         -DCTF_OLD_VERSIONS $(PTR32)
 CPPFLAGS += -D_LARGEFILE64_SOURCE=1 -D_FILE_OFFSET_BITS=64 -D_LONGLONG_TYPE
 
-BINDIR=../build-2.6.18-128.1.14.0.1.el5/
+BINDIR=../$(BUILD_DIR)
 
 LIB = $(BINDIR)/libdtrace.a
 
